feat: add preference
